2004-05-15  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (parse_arguments, MAIN): Give more precise
	diagnostics when not input file is found.
	* tests/output5.test: Adjust.
	Suggested by Jens Petersen.

2004-05-14  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/libs.am (AR, ARFLAGS): Move these definition ...
	* automake.in (handle_libraries): ... here, so that they are
	output even for EXTRA_LIBRARIES.
	* tests/ar2.test: New file.
	* tests/Makefile.am (TESTS): Add it.
	Report from Kevin Ryde.

2004-05-13  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (generate_makefile): Do not output Makefile.in on
	errors.
	* tests/werror2.test: New file.
	* tests/Makefile.am (TESTS): Add werror2.test.
	* tests/substtarg.test, tests/cond36.test, tests/backsl4.test:
	Adjust to run automake with -Wno-error when the output is expected
	in spite of the error.
	Report from Harlan Stenn.

	* doc/automake.texi (Program and Library Variables): Remove
	doubled word in footnote.

	* automake.in (handle_source_transform): Also check for a
	$(srcdir)/old_source rule when computing the default source name.
	Propagate this $(srcdir) prefix in Automake variables.
	* tests/ltlibsrc.test (noinst_LTLIBRARIES): Explicitly refer to
	$(srcdir)/zoo_d_old2_la.c.  This fixes another failure with BSD Make.

2004-05-13  Paul Eggert  <eggert@cs.ucla.edu>

	* Makefile.am (fetch): Work even with FreeBSD "make", which
	uses sh -e and thus errors-out if a simple-command fails.
	* lib/am/check.am (check-TESTS): Likewise.
	* lib/am/ltlib.am (clean-%DIR%LTLIBRARIES): Likewise.
	* lib/am/tags.am (TAGS): Likewise.

2004-05-13  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/lex3.test, tests/yacc6.test: Require GNU Make.
	Fixing these for BSD Make requires invasive changes (lexers and
	parsers must be built into $srcdir, and--most annoyingly--all
	references to parse.h must be changed to $(srcdir)/parse.h).
	Report from Mark D. Baushke.

2004-05-10  Alexandre Duret-Lutz  <adl@gnu.org>
