@@ -1,4 +1,4 @@
-@set UPDATED 13 May 2004
+@set UPDATED 15 May 2004
 @set UPDATED-MONTH May 2004
 @set EDITION 1.8a
 @set VERSION 1.8a
