@@ -1,7 +1,11 @@
 2004-05-15  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* lib/am/texibuild.am (?!GENERIC_INFO?%DEST_INFO_PREFIX%%DEST_SUFFIX%):
+	Fold a few lines to reduce the output by 5 lines.
+	Suggested by Karl Berry.
+
 	* automake.in (parse_arguments, MAIN): Give more precise
-	diagnostics when not input file is found.
+	diagnostics when no input file is found.
 	* tests/output5.test: Adjust.
 	Suggested by Jens Petersen.
 
